# synthoor

./: .gitignore  Dockerfile  README.md  WELCOME-TO-SYNTH.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
concepts/: 1-making sounds.ipynb  3-envelope.ipynb  4-synth.ipynb  README.md  config.py  filters.ipynb  modulator.ipynb
examples/: TB303.ipynb  notebook.ipynb
src/synthoor/: __init__.py  config.py  envelope.py  filters.py  oscillator.py  player.py  sound.py
tutorial/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  COMPONENTS.md  README.md  presentation.md  utils.py
tutorial/notebooks/: Envelope.ipynb  Filters.ipynb  Modulation.ipynb  Oscillators.ipynb
tutorial/static/: solutions.py
