[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthoor"
version = "1.0.1"
requires-python = ">=3.10, <3.13"
readme = "README.md"
dependencies = [
    "numpy",
    "sounddevice==0.4.6",
    "scipy",
    "librosa==0.11.0",
    "notebook==7.3.3",
    "matplotlib==3.10.1",
    "mido==1.3.3",
    "python-rtmidi==1.5.8",
    "jupyter"
]
